# convergio-delegation

./: .env.example  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  deny.toml  release-please-config.json
crates/convergio-delegation/: Cargo.toml
crates/convergio-delegation/src/: ext.rs  lib.rs  mcp_defs.rs  monitor.rs  pipeline.rs  queries.rs  remote_spawn.rs  routes.rs  schema.rs  types.rs
crates/convergio-delegation/tests/: e2e.rs
docs/adr/: 001-extraction.md  002-audit-security-fixes.md
