[workspace]
resolver = "2"
members = ["crates/convergio-delegation"]

[workspace.package]
version = "0.1.5"
edition = "2021"
license = "MIT"
repository = "https://github.com/Roberdan/convergio-delegation"

[workspace.dependencies]
# SDK dependencies
convergio-types = "0.1"
convergio-db = "0.1"
convergio-telemetry = "0.1"

# External convergio crates
# TODO: uncomment when convergio-file-transport repo is published on GitHub
# convergio-file-transport = { git = "https://github.com/Roberdan/convergio-file-transport", tag = "convergio-file-transport-v0.1.1" , version = "0.1" }
convergio-mesh = "0.1"

# Common deps — pin same versions as SDK for compatibility
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.52", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "fs", "io-util", "process"] }
tracing = "0.1"
axum = { version = "0.7", features = ["ws", "multipart"] }
rusqlite = { version = "0.32", features = ["bundled", "functions"] }
uuid = { version = "1", features = ["v4"] }
