[package]
name = "convergio-delegation"
description = "Delegation orchestrator — copy, spawn, monitor, sync, notify"
version = "0.1.3"
edition.workspace = true
license.workspace = true
readme = "../../README.md"

[dependencies]
convergio-types = { workspace = true }
convergio-db = { workspace = true }
convergio-telemetry = { workspace = true }
# TODO: uncomment when convergio-file-transport repo is published on GitHub
# convergio-file-transport = { workspace = true }
convergio-mesh = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
rusqlite = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
hyper = "1"
http-body-util = "0.1"
